# discord_bot_rust

./: Cargo.toml
src/: main.rs
